--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,16 @@
 
 
 
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self';
+	<meta http-equiv="Content-Security-Policy" content="default-src 'none';
     script-src 'self' https://code.jquery.com/ https://cdn.jsdelivr.net/ https://stackpath.bootstrapcdn.com/ https://use.fontawesome.com/ 'sha256-NTf5otn8WGEvx6DViiARc0aHFI5m01ESevcLW5GlGhI=';
     style-src-elem 'self' https://fonts.googleapis.com/ https://stackpath.bootstrapcdn.com/ https://use.fontawesome.com/;
     style-src 'self' https://fonts.googleapis.com/ https://stackpath.bootstrapcdn.com/ https://use.fontawesome.com/;
     font-src 'self' https://fonts.googleapis.com/ https://fonts.gstatic.com/;
-    frame-src https://www.google.com/maps/;">
+    frame-src https://www.google.com/maps/;
+    img-src 'self';
+    base-uri 'none';
+    form-action https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse https://docs.google.com/forms/u/0/d/e/1FAIpQLSdzAFN_NYgimJpe5bAEU-5AZSDdzZWBvl-DdiyVN0HVKMhvjw/formResponse;
+    child-src https://www.google.com/maps/;">
 
 
 
@@ -227,8 +231,8 @@
 					<p class="footer-right">
 						By subscribing to our mailing list you will always get latest offers and updates from us.
 						<br>
-						<form class="text-center footer-form" method="POST" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse">
-							<input type="text" name="entry.1873482848" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
+						<form class="text-center footer-form" method="POST" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse" autocomplete="off">
+							<input type="text" autocomplete="off" name="entry.1873482848" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
 						</form>
 					</p>
 					<p class="c" id="c"></p>
