--- a/about.html
+++ b/about.html
@@ -13,11 +13,15 @@
 
 
 
-	<meta http-equiv="Content-Security-Policy" content="default-src 'self';
+	<meta http-equiv="Content-Security-Policy" content="default-src 'none';
     script-src 'self' https://code.jquery.com/ https://cdn.jsdelivr.net/ https://stackpath.bootstrapcdn.com/ https://use.fontawesome.com/ 'sha256-Gt8g3F2kAw6C7vRclPtOX34S4q+i6pOrq9YakHYvxMY=';
     style-src-elem 'self' https://fonts.googleapis.com/ https://stackpath.bootstrapcdn.com/ https://use.fontawesome.com/;
     style-src 'self' https://fonts.googleapis.com/ https://stackpath.bootstrapcdn.com/ https://use.fontawesome.com/;
-    font-src 'self' https://fonts.googleapis.com/ https://fonts.gstatic.com/">
+    font-src 'self' https://fonts.googleapis.com/ https://fonts.gstatic.com/;
+    img-src 'self';
+    base-uri 'none';
+    form-action https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse;
+    child-src 'self';">
 
 
 
@@ -318,8 +322,8 @@
 					<p class="footer-right">
 						By subscribing to our mailing list you will always get latest offers and updates from us.
 						<br>
-						<form class="text-center footer-form" method="POST" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse">
-							<input type="text" name="entry.1873482848" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
+						<form autocomplete="off" class="text-center footer-form" method="POST" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse">
+							<input autocomplete="off" type="text" name="entry.1873482848" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
 						</form>
 					</p>
 					<p class="c" id="c"></p>
