--- a/products.html
+++ b/products.html
@@ -20,7 +20,8 @@
     font-src 'self' https://fonts.googleapis.com/ https://fonts.gstatic.com/;
     img-src 'self';
     base-uri 'none';
-    form-action https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse;">
+    form-action https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse;
+    child-src 'self';">
 
 
 
