--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 	<meta property="twitter:image" content="https://urjafarmeats.com/images/favicon.png" />
 
 
-	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" integrity="sha384-68pndfrXlmVLAv4MHydJYh5gLxAlWMjS48eEstZ7Bd9+GmLwIKK8UXUC+sgGdsrL" crossorigin="anonymous" />
 
 
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
